// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication Component should allow being disabled: disabled 1`] = `
<ContextProvider
  value={
    {
      "errorCodes": undefined,
      "errorStatus": null,
      "locale": undefined,
    }
  }
>
  <MessageView
    icon={null}
    message={null}
    pageTitle={null}
    title={null}
  >
    <Maintenance
      description="t(curiosity-auth.maintenanceCopy, ...)"
    />
  </MessageView>
</ContextProvider>
`;

exports[`Authentication Component should render a basic component: basic 1`] = `
<ContextProvider
  value={
    {
      "errorCodes": undefined,
      "errorStatus": null,
      "locale": undefined,
    }
  }
>
  <MessageView
    icon={null}
    message={null}
    pageTitle={null}
    title={null}
  >
    <NotAuthorized
      serviceName="Subscriptions"
    />
  </MessageView>
</ContextProvider>
`;

exports[`Authentication Component should render a component authorized: authorized 1`] = `
<Authentication
  appName="subscriptions"
  isDisabled={false}
  t={[Function]}
  useGetAuthorization={[Function]}
>
  <span
    className="test"
  >
    lorem
  </span>
</Authentication>
`;

exports[`Authentication Component should render a component error: error 1`] = `
<Authentication
  appName="subscriptions"
  isDisabled={false}
  t={[Function]}
  useGetAuthorization={[Function]}
>
  <MessageView
    icon={null}
    message={null}
    pageTitle={null}
    title={null}
  >
    <PageLayout
      className=""
    >
      <PageHeader
        key=".0"
        productLabel={null}
        t={[Function]}
      >
        <PageHeader>
          <section
            className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
            widget-type="InsightsPageHeader"
          >
            <Flex
              justifyContent={
                {
                  "sm": "justifyContentSpaceBetween",
                }
              }
            >
              <div
                className="pf-l-flex pf-m-justify-content-space-between-on-sm"
              >
                <FlexItem>
                  <div
                    className=""
                  >
                    <PageHeaderTitle
                      className="pf-u-mb-sm"
                      title="Subscriptions"
                    >
                      <Title
                        className="pf-u-mb-sm"
                        headingLevel="h1"
                        size="2xl"
                        widget-type="InsightsPageHeaderTitle"
                      >
                        <h1
                          className="pf-c-title pf-m-2xl pf-u-mb-sm"
                          data-ouia-component-id="OUIA-Generated-Title-1"
                          data-ouia-component-type="PF4/Title"
                          data-ouia-safe={true}
                          widget-type="InsightsPageHeaderTitle"
                        >
                          Subscriptions
                        </h1>
                      </Title>
                    </PageHeaderTitle>
                  </div>
                </FlexItem>
              </div>
            </Flex>
          </section>
        </PageHeader>
      </PageHeader>
      <PageSection
        className="curiosity "
        padding={
          {
            "default": "noPadding",
          }
        }
      >
        <section
          className="pf-c-page__main-section pf-m-no-padding curiosity "
        >
          <PageSection
            className=""
            key=".1"
          >
            <Section
              className="curiosity-page-section "
            >
              <section
                className="curiosity-page-section "
              >
                 
                <NotAuthorized
                  serviceName="Subscriptions"
                >
                  <EmptyState
                    className="ins-c-not-authorized "
                    variant="full"
                  >
                    <div
                      className="pf-c-empty-state ins-c-not-authorized "
                    >
                      <div
                        className="pf-c-empty-state__content"
                      >
                        <EmptyStateIcon
                          icon={[Function]}
                        >
                          <LockIcon
                            aria-hidden="true"
                            className="pf-c-empty-state__icon"
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden="true"
                              aria-labelledby={null}
                              className="pf-c-empty-state__icon"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 448 512"
                              width="1em"
                            >
                              <path
                                d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
                              />
                            </svg>
                          </LockIcon>
                        </EmptyStateIcon>
                        <Title
                          headingLevel="h5"
                          size="lg"
                        >
                          <h5
                            className="pf-c-title pf-m-lg"
                            data-ouia-component-id="OUIA-Generated-Title-2"
                            data-ouia-component-type="PF4/Title"
                            data-ouia-safe={true}
                          >
                            You do not have access to Subscriptions
                          </h5>
                        </Title>
                        <EmptyStateBody>
                          <div
                            className="pf-c-empty-state__body"
                          >
                            <ContactBody>
                              Contact your organization administrator(s) for more information or visit 
                              <a
                                href="./settings/my-user-access"
                              >
                                My User Access
                              </a>
                                to learn more about your permissions.
                            </ContactBody>
                          </div>
                        </EmptyStateBody>
                        <Button
                          component="a"
                          href="."
                          variant="primary"
                        >
                          <ButtonBase
                            component="a"
                            href="."
                            innerRef={null}
                            variant="primary"
                          >
                            <a
                              aria-disabled={false}
                              aria-label={null}
                              className="pf-c-button pf-m-primary"
                              data-ouia-component-id="OUIA-Generated-Button-primary-1"
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={null}
                              href="."
                              role={null}
                              type={null}
                            >
                              Go to landing page
                            </a>
                          </ButtonBase>
                        </Button>
                      </div>
                    </div>
                  </EmptyState>
                </NotAuthorized>
                 
              </section>
            </Section>
          </PageSection>
        </section>
      </PageSection>
    </PageLayout>
  </MessageView>
</Authentication>
`;

exports[`Authentication Component should render a component pending: pending 1`] = `
<ContextProvider
  value={
    {
      "authorized": {},
      "errorCodes": [],
      "errorStatus": undefined,
    }
  }
>
  <MessageView
    icon={[Function]}
    message="t(curiosity-auth.pending, ...)"
    pageTitle=" "
    title={null}
  />
</ContextProvider>
`;

exports[`Authentication Component should return a message on 401 error: 401 error 1`] = `
<ContextProvider
  value={
    {
      "authorized": {},
      "errorCodes": [],
      "errorStatus": 401,
    }
  }
>
  <MessageView
    icon={null}
    message={null}
    pageTitle={null}
    title={null}
  >
    <NotAuthorized
      serviceName="Subscriptions"
    />
  </MessageView>
</ContextProvider>
`;

exports[`Authentication Component should return a redirect on 418 error: 418 error 1`] = `
<ContextProvider
  value={
    {
      "authorized": {},
      "errorCodes": [],
      "errorStatus": 418,
    }
  }
>
  <Redirect
    isReplace={true}
    route="/optin"
    url={null}
  />
</ContextProvider>
`;

exports[`Authentication Component should return a redirect on a specific 403 error and error code: 403 error 1`] = `
<ContextProvider
  value={
    {
      "authorized": {},
      "errorCodes": [
        "SUBSCRIPTIONS1004",
      ],
      "errorStatus": 403,
    }
  }
>
  <Redirect
    isReplace={true}
    route="/optin"
    url={null}
  />
</ContextProvider>
`;

exports[`Authentication Component should return a redirect on a specific 403 error and error code: 403 redirect error 1`] = `
<ContextProvider
  value={
    {
      "authorized": {},
      "errorCodes": [
        "SUBSCRIPTIONS1004",
      ],
      "errorStatus": 403,
    }
  }
>
  <Redirect
    isReplace={true}
    route="/optin"
    url={null}
  />
</ContextProvider>
`;
